tentativo di salvare tutto (fallito)